--- a/102197016.ipynb
+++ b/102197016.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "@author: mukul sharda\n",
+    "@subgroup: CS-4\n",
+    "@roll-no: 102197016\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
