--- a/102197016.ipynb
+++ b/102197016.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n@author: mukul sharda\\n@subgroup: CS-4\\n@roll-no: 102197016\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "@author: mukul sharda\n",
@@ -15,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -341,18 +352,26 @@
      "text": [
       "SVC:\n",
       "0.5\n",
+      "\n",
       "LR:\n",
-      "0.5\n",
+      "0.75\n",
+      "\n",
       "DT:\n",
       "0.75\n",
+      "\n",
       "GNB:\n",
       "0.5\n",
+      "\n",
       "KNN:\n",
-      "0.75\n"
+      "0.5\n",
+      "\n",
+      "The sample size is < 30. Therefore, cannot conclude anything using this data.\n"
      ]
     }
    ],
    "source": [
+    "# ONLY EXAMPLE IS TAKEN.\n",
+    "\n",
     "X, Y = get_rus(x, y)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2)\n",
     "# print(X_train.shape)\n",
@@ -364,32 +383,34 @@
     "svc_clf = SVC()\n",
     "svc_clf.fit(X_train, y_train)\n",
     "ypred = svc_clf.predict(X_test)\n",
-    "print(accuracy_score(y_test, ypred))\n",
+    "print(accuracy_score(y_test, ypred), end=\"\\n\\n\")\n",
     "\n",
     "\n",
     "print(\"LR:\")\n",
     "lr_clf = LogisticRegression()\n",
     "lr_clf.fit(X_train, y_train)\n",
     "ypred2 = lr_clf.predict(X_test)\n",
-    "print(accuracy_score(y_test, ypred2))\n",
+    "print(accuracy_score(y_test, ypred2), end=\"\\n\\n\")\n",
     "\n",
     "print(\"DT:\")\n",
     "dt_clf = DecisionTreeClassifier()\n",
     "dt_clf.fit(X_train, y_train)\n",
     "ypred3 = dt_clf.predict(X_test)\n",
-    "print(accuracy_score(y_test, ypred3))\n",
+    "print(accuracy_score(y_test, ypred3), end=\"\\n\\n\")\n",
     "\n",
     "print(\"GNB:\")\n",
     "gnb_clf = GaussianNB()\n",
     "gnb_clf.fit(X_train, y_train)\n",
     "ypred4 = gnb_clf.predict(X_test)\n",
-    "print(accuracy_score(y_test, ypred4))\n",
+    "print(accuracy_score(y_test, ypred4), end=\"\\n\\n\")\n",
     "\n",
     "print(\"KNN:\")\n",
     "knn_clf = KNeighborsClassifier(n_neighbors=5)\n",
     "knn_clf.fit(X_train, y_train)\n",
     "ypred5 = knn_clf.predict(X_test)\n",
-    "print(accuracy_score(y_test, ypred5))"
+    "print(accuracy_score(y_test, ypred5), end=\"\\n\\n\")\n",
+    "\n",
+    "print(\"The sample size is < 30. Therefore, cannot conclude anything using this data.\")"
    ]
   },
   {
@@ -402,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -410,15 +431,20 @@
      "output_type": "stream",
      "text": [
       "SVC:\n",
-      "0.7124183006535948\n",
+      "0.761437908496732\n",
+      "\n",
       "LR:\n",
-      "0.934640522875817\n",
+      "0.9281045751633987\n",
+      "\n",
       "DT:\n",
       "1.0\n",
+      "\n",
       "GNB:\n",
-      "0.7483660130718954\n",
+      "0.7745098039215687\n",
+      "\n",
       "KNN:\n",
-      "0.9738562091503268\n"
+      "0.9738562091503268\n",
+      "\n"
      ]
     }
    ],
@@ -434,32 +460,32 @@
     "svc_clf = SVC()\n",
     "svc_clf.fit(X_train, y_train)\n",
     "ypred = svc_clf.predict(X_test)\n",
-    "print(accuracy_score(y_test, ypred))\n",
+    "print(accuracy_score(y_test, ypred), end=\"\\n\\n\")\n",
     "\n",
     "\n",
     "print(\"LR:\")\n",
     "lr_clf = LogisticRegression()\n",
     "lr_clf.fit(X_train, y_train)\n",
     "ypred2 = lr_clf.predict(X_test)\n",
-    "print(accuracy_score(y_test, ypred2))\n",
+    "print(accuracy_score(y_test, ypred2), end=\"\\n\\n\")\n",
     "\n",
     "print(\"DT:\")\n",
     "dt_clf = DecisionTreeClassifier()\n",
     "dt_clf.fit(X_train, y_train)\n",
     "ypred3 = dt_clf.predict(X_test)\n",
-    "print(accuracy_score(y_test, ypred3))\n",
+    "print(accuracy_score(y_test, ypred3), end=\"\\n\\n\")\n",
     "\n",
     "print(\"GNB:\")\n",
     "gnb_clf = GaussianNB()\n",
     "gnb_clf.fit(X_train, y_train)\n",
     "ypred4 = gnb_clf.predict(X_test)\n",
-    "print(accuracy_score(y_test, ypred4))\n",
+    "print(accuracy_score(y_test, ypred4), end=\"\\n\\n\")\n",
     "\n",
     "print(\"KNN:\")\n",
     "knn_clf = KNeighborsClassifier(n_neighbors=5)\n",
     "knn_clf.fit(X_train, y_train)\n",
     "ypred5 = knn_clf.predict(X_test)\n",
-    "print(accuracy_score(y_test, ypred5))"
+    "print(accuracy_score(y_test, ypred5), end=\"\\n\\n\")"
    ]
   },
   {
@@ -472,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -480,15 +506,15 @@
      "output_type": "stream",
      "text": [
       "SVC:\n",
-      "0.6797385620915033\n",
+      "0.6666666666666666\n",
       "LR:\n",
-      "0.9150326797385621\n",
+      "0.8921568627450981\n",
       "DT:\n",
-      "0.9771241830065359\n",
+      "0.9869281045751634\n",
       "GNB:\n",
-      "0.7810457516339869\n",
+      "0.8888888888888888\n",
       "KNN:\n",
-      "0.8366013071895425\n"
+      "0.869281045751634\n"
      ]
     }
    ],
@@ -534,20 +560,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -557,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,12 +674,12 @@
     "s2 = SystematicSampling(newdf)\n",
     "s3 = StratifiedSampling(newdf,0.95,0.05)\n",
     "s4 = ClusterSampling(newdf,0.95,0.05,300)\n",
-    "s5 = ConvenienceSampling(newdf,6)"
+    "s5 = ConvenienceSampling(newdf,5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,15 +693,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1    135\n",
-      "0    135\n",
+      "1    139\n",
+      "0    131\n",
       "Name: Class, dtype: int64\n",
       "0    20\n",
       "1    20\n",
@@ -697,11 +709,11 @@
       "0    541\n",
       "1    541\n",
       "Name: Class, dtype: int64\n",
-      "0    172\n",
-      "1    165\n",
+      "0    169\n",
+      "1    168\n",
       "Name: Class, dtype: int64\n",
       "1    670\n",
-      "0    191\n",
+      "0    177\n",
       "Name: Class, dtype: int64\n"
      ]
     }
@@ -713,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,18 +735,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8303108808290155\n",
+      "0.8005181347150259\n",
       "0.8419689119170984\n",
-      "0.8523316062176166\n",
+      "0.8419689119170984\n",
       "0.8393782383419689\n",
-      "0.927461139896373\n"
+      "0.9261658031088082\n"
      ]
     }
    ],
@@ -759,18 +771,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8782383419689119\n",
+      "0.8458549222797928\n",
       "0.6968911917098446\n",
-      "0.9481865284974094\n",
-      "0.9015544041450777\n",
-      "0.9559585492227979\n"
+      "0.9559585492227979\n",
+      "0.866580310880829\n",
+      "0.9481865284974094\n"
      ]
     }
    ],
@@ -791,18 +803,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8018134715025906\n",
+      "0.6308290155440415\n",
       "0.7901554404145078\n",
-      "0.7189119170984456\n",
-      "0.9093264248704663\n",
-      "0.9106217616580311\n"
+      "0.8536269430051814\n",
+      "0.8898963730569949\n",
+      "0.917098445595855\n"
      ]
     }
    ],
@@ -823,17 +835,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6722797927461139\n",
+      "0.772020725388601\n",
       "0.7396373056994818\n",
-      "0.7202072538860104\n",
-      "0.6839378238341969\n",
+      "0.7383419689119171\n",
+      "0.6865284974093264\n",
       "0.011658031088082901\n"
      ]
     }
@@ -855,16 +867,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9572538860103627\n",
-      "0.8678756476683938\n",
-      "0.9857512953367875\n",
+      "0.9598445595854922\n",
+      "0.866580310880829\n",
+      "0.9831606217616581\n",
       "0.9844559585492227\n",
       "0.9987046632124352\n"
      ]
@@ -887,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -936,43 +948,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Log Reg</th>\n",
-       "      <td>0.830311</td>\n",
+       "      <td>0.800518</td>\n",
        "      <td>0.841969</td>\n",
-       "      <td>0.852332</td>\n",
+       "      <td>0.841969</td>\n",
        "      <td>0.839378</td>\n",
-       "      <td>0.927461</td>\n",
+       "      <td>0.926166</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SVC</th>\n",
-       "      <td>0.672280</td>\n",
+       "      <td>0.772021</td>\n",
        "      <td>0.739637</td>\n",
-       "      <td>0.720207</td>\n",
-       "      <td>0.683938</td>\n",
-       "      <td>0.011658</td>\n",
+       "      <td>0.738342</td>\n",
+       "      <td>0.686528</td>\n",
+       "      <td>0.936508</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>KNN</th>\n",
-       "      <td>0.878238</td>\n",
+       "      <td>0.845855</td>\n",
        "      <td>0.696891</td>\n",
-       "      <td>0.948187</td>\n",
-       "      <td>0.901554</td>\n",
        "      <td>0.955959</td>\n",
+       "      <td>0.866580</td>\n",
+       "      <td>0.948187</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Decision Tree</th>\n",
-       "      <td>0.957254</td>\n",
-       "      <td>0.867876</td>\n",
-       "      <td>0.985751</td>\n",
+       "      <td>0.959845</td>\n",
+       "      <td>0.866580</td>\n",
+       "      <td>0.983161</td>\n",
        "      <td>0.984456</td>\n",
        "      <td>0.998705</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Gaussian Naive bayes</th>\n",
-       "      <td>0.801813</td>\n",
+       "      <td>0.630829</td>\n",
        "      <td>0.790155</td>\n",
-       "      <td>0.718912</td>\n",
-       "      <td>0.909326</td>\n",
-       "      <td>0.910622</td>\n",
+       "      <td>0.853627</td>\n",
+       "      <td>0.889896</td>\n",
+       "      <td>0.917098</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -980,28 +992,28 @@
       ],
       "text/plain": [
        "                      Simple Random Sampling  Systematic sampling  \\\n",
-       "Log Reg                             0.830311             0.841969   \n",
-       "SVC                                 0.672280             0.739637   \n",
-       "KNN                                 0.878238             0.696891   \n",
-       "Decision Tree                       0.957254             0.867876   \n",
-       "Gaussian Naive bayes                0.801813             0.790155   \n",
+       "Log Reg                             0.800518             0.841969   \n",
+       "SVC                                 0.772021             0.739637   \n",
+       "KNN                                 0.845855             0.696891   \n",
+       "Decision Tree                       0.959845             0.866580   \n",
+       "Gaussian Naive bayes                0.630829             0.790155   \n",
        "\n",
        "                      Sratified Sampling  Cluster Sampling  \\\n",
-       "Log Reg                         0.852332          0.839378   \n",
-       "SVC                             0.720207          0.683938   \n",
-       "KNN                             0.948187          0.901554   \n",
-       "Decision Tree                   0.985751          0.984456   \n",
-       "Gaussian Naive bayes            0.718912          0.909326   \n",
+       "Log Reg                         0.841969          0.839378   \n",
+       "SVC                             0.738342          0.686528   \n",
+       "KNN                             0.955959          0.866580   \n",
+       "Decision Tree                   0.983161          0.984456   \n",
+       "Gaussian Naive bayes            0.853627          0.889896   \n",
        "\n",
        "                      Convenience Sampling  \n",
-       "Log Reg                           0.927461  \n",
-       "SVC                               0.011658  \n",
-       "KNN                               0.955959  \n",
+       "Log Reg                           0.926166  \n",
+       "SVC                               0.936508  \n",
+       "KNN                               0.948187  \n",
        "Decision Tree                     0.998705  \n",
-       "Gaussian Naive bayes              0.910622  "
+       "Gaussian Naive bayes              0.917098  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
